--- a/app/src/main/res/drawable/tabs_bg.xml
+++ b/app/src/main/res/drawable/tabs_bg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#112B3C"/>
+    <solid android:color="@color/card_bg"/>
+    <alpha android:value="220"/>
     <corners android:radius="32dp"/>
 </shape>
