--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#14395B"
+    android:background="@color/dark_bg"
     android:orientation="vertical"
     android:padding="0dp">
 
@@ -12,13 +12,13 @@
         android:layout_height="120dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
-        android:background="#fff"
+        android:background="@color/card_bg"
         android:alpha="0.15">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="[Calendario aquí]"
-            android:textColor="#14395B"
+            android:textColor="@color/gold"
             android:textSize="18sp"
             android:layout_gravity="center" />
     </FrameLayout>
@@ -43,7 +43,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/ic_media_next"
-            android:tint="#fff" />
+            android:tint="@color/text_primary_dark" />
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlists_recycler"
@@ -76,7 +76,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/ic_media_next"
-            android:tint="#fff" />
+            android:tint="@color/text_primary_dark" />
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tasks_recycler"
