--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -146,5 +146,15 @@
             android:tint="#fff"/>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Playlists dentro del player -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPlayerPlaylists"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/player_controls"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal" />
 
+</androidx.constraintlayout.widget.ConstraintLayout>
